<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="model"
            type="com.example.zadanie.ui.viewmodels.AuthViewModel" />

        <variable
            name="navController"
            type="androidx.navigation.NavController" />

        <import type="android.view.View"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/green_bg">

            <ImageView
                android:layout_width="131dp"
                android:layout_height="97dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="93dp"
                android:src="@drawable/logo" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:theme="@style/ProgressBarStyle"
                android:layout_width="match_parent"
                android:indeterminate="true"
                android:layout_height="69dp"
                android:visibility="@{model.loading ? View.VISIBLE : View.INVISIBLE}" />

        </FrameLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="36.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_corner">

            <!-- INPUT -->
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/username_icon"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_email"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/username_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/username" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="12.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_corner">

            <!-- INPUT -->
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/icon"
                android:autofillHints="@string/prompt_password"
                android:background="@android:color/transparent"
                android:hint="@string/prompt_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/pass" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="12.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_border_rounded_corner">

            <!-- INPUT -->
            <EditText
                android:id="@+id/repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/icon_repeat"
                android:autofillHints="@string/prompt_password"
                android:background="@android:color/transparent"
                android:hint="@string/repeat_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/icon_repeat"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:src="@drawable/lock" />

        </RelativeLayout>


        <TextView
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="18.7dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/blue_fill__rounded_color"
            android:gravity="center"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:text="@string/action_sign_up"
            android:textColor="#ffffff"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:padding="30dp"
            android:text="@string/or_log_in"
            android:textColor="#1566e0"
            android:textSize="10.5sp" />

        <View
            showTextToast="@{model.message}"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </LinearLayout>


</layout>

