<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="model"
            type="com.example.zadanie.ui.viewmodels.AddFriendsViewModel" />

        <variable
            name="navController"
            type="androidx.navigation.NavController" />

        <import type="android.view.View" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/top_navigation_menu"
                app:navigationIcon="@drawable/back"
                android:background="@color/white"
                app:titleTextColor="@color/black"
                app:title="Add friend"
                />

        </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:background="@drawable/blue_border_rounded_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.161">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/username_icon"
                android:autofillHints="@string/prompt_email"
                android:background="@android:color/transparent"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="17dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck" />

            <!-- ICON -->
            <ImageView
                android:id="@+id/username_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="17dp"
                android:contentDescription="@string/icon"
                android:src="@drawable/username" />

        </RelativeLayout>

        <ImageButton
            android:id="@+id/addFriendSubmit"
            android:layout_width="99dp"
            android:layout_height="47dp"
            android:background="@drawable/blue_fill__rounded_color"
            android:padding="12dp"
            android:src="@drawable/add_friend"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:layout_constraintVertical_bias="0.058"
            android:contentDescription="@string/add_friends"
            app:srcCompat="@drawable/add_friend" />

        <View
            showTextToast="@{model.message}"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:visibility="@{model.loading ? View.VISIBLE : View.INVISIBLE}"
            app:layout_anchor="@+id/constraintLayout"
            app:layout_anchorGravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>