<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="model"
            type="com.example.zadanie.ui.viewmodels.BarsViewModel" />

       <variable
            name="navController"
            type="androidx.navigation.NavController" />

        <import type="android.view.View" />

        <import type="com.example.zadanie.ui.viewmodels.SortBy" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/top_navigation_menu"
                app:title="Bars"
                android:background="@color/white"
                app:titleTextColor="@color/black"
                />

        </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginStart="10dp"
            app:chipSpacingVertical="10dp"
            app:chipSpacingHorizontal="10dp"
            app:layout_constraintBottom_toTopOf="@+id/divider"
            app:layout_constraintTop_toTopOf="@id/container">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSortDefault"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                app:chipIcon="@drawable/sort_by_default"
                app:chipIconVisible="true"
                app:chipIconSize="18dp"
                android:textColor="@color/black"
                android:text="@string/default_sort" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSortName"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/sort_by_alpha"
                app:chipIconVisible="true"
                app:chipIconSize="18dp"
                android:textColor="@color/black"
                android:text="@string/name" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipSortCount"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:chipIcon="@drawable/sort_by_count"
                app:chipIconVisible="true"
                app:chipIconSize="18dp"
                android:textColor="@color/black"
                android:text="@string/count" />

        </com.google.android.material.chip.ChipGroup>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/default_fill_rounded_color"
            app:layout_constraintTop_toBottomOf="@id/chipGroup"
            app:layout_constraintBottom_toTopOf="@id/swiperefresh"
            />

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="55dp"
            android:layout_marginTop="130dp"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.996">

            <com.example.zadanie.ui.widget.barlist.BarsRecyclerView
                android:id="@+id/recycleView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:barItems="@{model.bars}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

<!--        <View-->
<!--            android:id="@+id/view"-->
<!--            showTextToast="@{model.message}"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="1dp"-->
<!--            android:layout_marginStart="4dp"-->
<!--            android:layout_marginBottom="28dp"-->
<!--            app:layout_constraintBottom_toTopOf="@id/bottomAppBar"-->
<!--            app:layout_constraintStart_toStartOf="parent" />-->
        <View
            showTextToast="@{model.message}"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>